--- a/recovery/root/init.recovery.mt6771.rc
+++ b/recovery/root/init.recovery.mt6771.rc
@@ -8,9 +8,9 @@ on fs && property:ro.debuggable=0
     # set charging free due to it wait for USB activation
     start adbd
 
-on early-fs
+#on early-fs
     # start vold for userdata decryption
-    start vold
+#    start vold
 
 on property:sys.usb.ffs.ready=1
     write /config/usb_gadget/g1/UDC "none"
