--- a/recovery/root/init.recovery.mt6771.rc
+++ b/recovery/root/init.recovery.mt6771.rc
@@ -1,25 +1,66 @@
+on early-init
+    setprop sys.usb.configfs 0
+    mount configfs none /config
+    mkdir /config/usb_gadget/g1 0770
+    mkdir /config/usb_gadget/g1/strings/0x409 0770
+    write /config/usb_gadget/g1/bcdUSB 0x0210
+    write /config/usb_gadget/g1/idVendor 0x18d1
+    write /config/usb_gadget/g1/bcdDevice 0x0414
+    write /config/usb_gadget/g1/strings/0x409/serialnumber ${ro.serialno}
+    write /config/usb_gadget/g1/strings/0x409/manufacturer ${ro.product.manufacturer}
+    write /config/usb_gadget/g1/strings/0x409/product ${ro.product.model}
+    #mkdir /config/usb_gadget/g1/functions/accessory.gs2
+    #mkdir /config/usb_gadget/g1/functions/audio_source.gs3
+    #mkdir /config/usb_gadget/g1/functions/midi.gs5
+    mkdir /config/usb_gadget/g1/functions/ffs.adb
+    mkdir /config/usb_gadget/g1/functions/ffs.mtp
+    mkdir /config/usb_gadget/g1/functions/mtp.gs0
+    #mkdir /config/usb_gadget/g1/functions/ffs.ptp
+    #mkdir /config/usb_gadget/g1/functions/diag.diag
+    #mkdir /config/usb_gadget/g1/functions/diag.diag_mdm
+    #mkdir /config/usb_gadget/g1/functions/cser.dun.0
+    #mkdir /config/usb_gadget/g1/functions/cser.nmea.1
+    #mkdir /config/usb_gadget/g1/functions/gsi.rmnet
+    #mkdir /config/usb_gadget/g1/functions/gsi.rndis
+    #mkdir /config/usb_gadget/g1/functions/gsi.dpl
+    #mkdir /config/usb_gadget/g1/functions/qdss.qdss
+    #mkdir /config/usb_gadget/g1/functions/qdss.qdss_mdm
+    mkdir /config/usb_gadget/g1/configs/b.1 0770
+    mkdir /config/usb_gadget/g1/configs/b.1/strings/0x409 0770
+    write /config/usb_gadget/g1/os_desc/b_vendor_code 0x00
+    write /config/usb_gadget/g1/os_desc/qw_sign "MSFT100"
+    setprop sys.usb.mtp.device_type 3
+    setprop sys.usb.controller "musb-hdrc"
+    symlink /config/usb_gadget/g1/configs/b.1 /config/usb_gadget/g1/os_desc/b.1
+    #write /sys/module/libcomposite/parameters/disable_l1_for_hs "y"
+    #write /config/usb_gadget/g1/functions/gsi.rndis/rndis_class_id 1
+    mkdir /dev/usb-ffs
+    mkdir /dev/usb-ffs/mtp
+    mount functionfs mtp /dev/usb-ffs/mtp uid=2000,gid=2000
+
 on init
     setprop sys.usb.configfs 1
     setprop sys.usb.ffs.aio_compat 1
 
-on fs && property:ro.debuggable=0
-    # distinguish USB shoulde connect or not, i.e. CDP vs SDP
-    write /sys/class/udc/musb-hdrc/device/cmode 2
-    # set charging free due to it wait for USB activation
-    start adbd
+#on fs
 
-on early-fs
-    # start vold for userdata decryption
-    start vold
+    # distinguish USB shoulde connect or not, i.e. CDP vs SDP
+ #   write /sys/class/udc/musb-hdrc/device/cmode 2
+    # set charging free due to it wait for USB activation
+  #  start adbd
+
+on property:sys.usb.config=mtp,adb && property:sys.usb.configfs=1
+    start adbd
 
 on property:sys.usb.ffs.ready=1
     write /config/usb_gadget/g1/UDC "none"
     rm /config/usb_gadget/g1/configs/b.1/f1
     rm /config/usb_gadget/g1/configs/b.1/f2
-    write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "adb"
+    write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "mtp_adb"
     write /config/usb_gadget/g1/idVendor 0x18d1
     write /config/usb_gadget/g1/idProduct 0xd001
-    symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.mtp /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/ffs.adb /config/usb_gadget/g1/configs/b.1/f2
     write /config/usb_gadget/g1/UDC "musb-hdrc"
 
 on post-fs
